--- a/student.html
+++ b/student.html
@@ -67,7 +67,7 @@
                     <option value="activities">Activities</option>
                   </select>
                 </div>
-                <div id="studentRecords" class="table-responsive">
+                <div id="studentRecords" class="table-responsive student-records-table">
                   <!-- Records will be loaded here -->
                 </div>
               </div>
