--- a/index.html
+++ b/index.html
@@ -4,77 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Student E-Index</title>
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      rel="stylesheet"
-    />
-    <!-- Inter Font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
     <!-- Custom CSS -->
     <link href="assets/css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="container-xl">
-        <a class="navbar-brand" href="/">Student E-Index</a>
-      </div>
-    </nav>
-
-    <div class="container-xl py-4">
-      <div class="row g-4">
+    <div class="container">
+      <div class="grid">
         <!-- Students Table Section -->
-        <div class="col-lg-8">
+        <div class="main-content">
           <div class="card">
             <div class="card-header">
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="d-flex align-items-center gap-4">
-                  <h5 class="mb-0">Students</h5>
+              <div class="header-content">
+                <div class="header-left">
+                  <h5>Students</h5>
                   <div class="search-container">
-                    <div class="input-group">
-                      <span class="input-group-text">
-                        <i class="fas fa-search"></i>
-                      </span>
-                      <input
-                        type="text"
-                        class="form-control"
-                        id="searchInput"
-                        placeholder="Search students..."
-                        autocomplete="off"
-                      />
-                    </div>
+                    <input
+                      type="text"
+                      class="form-control search-input"
+                      id="searchInput"
+                      placeholder="Search students..."
+                      autocomplete="off"
+                    />
                   </div>
                 </div>
-                <button
-                  class="btn btn-primary"
-                  data-bs-toggle="modal"
-                  data-bs-target="#addStudentModal"
-                >
-                  <i class="fas fa-plus me-2"></i>Add Student
+                <button class="btn btn-primary" id="addStudentBtn">
+                  <span id="plusIcon"></span>Add Student
                 </button>
               </div>
-              <div class="filter-controls mt-3">
-                <div class="d-flex gap-3">
-                  <select
-                    id="courseFilter"
-                    class="form-select form-select-sm"
-                    style="width: auto"
-                  >
+              <div class="filter-controls">
+                <div class="filter-group">
+                  <select id="courseFilter" class="form-select">
                     <option value="">All Courses</option>
                   </select>
-                  <select
-                    id="yearFilter"
-                    class="form-select form-select-sm"
-                    style="width: auto"
-                  >
+                  <select id="yearFilter" class="form-select">
                     <option value="">All Years</option>
                     <option value="1">1st Year</option>
                     <option value="2">2nd Year</option>
@@ -82,26 +44,22 @@
                     <option value="4">4th Year</option>
                     <option value="5">5th Year</option>
                   </select>
-                  <select
-                    id="sectionFilter"
-                    class="form-select form-select-sm"
-                    style="width: auto"
-                  >
+                  <select id="sectionFilter" class="form-select">
                     <option value="">All Sections</option>
                   </select>
                 </div>
               </div>
             </div>
-            <div class="card-body p-0">
-              <div class="table-responsive">
-                <table id="studentsTable" class="table mb-0">
+            <div class="card-body">
+              <div class="table-container">
+                <table id="studentsTable" class="table">
                   <thead>
                     <tr>
                       <th>Name</th>
                       <th>Course</th>
                       <th>Year</th>
                       <th>Section</th>
-                      <th class="text-end">Actions</th>
+                      <th class="text-right">Actions</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -114,35 +72,30 @@
         </div>
 
         <!-- RFID Scanner Section -->
-        <div class="col-lg-4">
+        <div class="scanner-content">
           <div class="card scanner-card">
             <div class="card-header">
-              <h5 class="mb-0">RFID Scanner</h5>
+              <h5>RFID Scanner</h5>
             </div>
             <div class="card-body">
               <div class="scanner-input-group">
-                <div class="input-group mb-3">
-                  <input
-                    type="text"
-                    class="form-control"
-                    id="rfidInput"
-                    placeholder="Scan RFID Card..."
-                    autofocus
-                    autocomplete="off"
-                  />
-                  <button class="btn btn-primary" id="searchRfidBtn">
-                    <i class="fas fa-search"></i>
-                  </button>
-                </div>
-                <div id="searchResult" class="search-result d-none">
+                <input
+                  type="text"
+                  class="form-control"
+                  id="rfidInput"
+                  placeholder="Scan RFID Card..."
+                  autofocus
+                  autocomplete="off"
+                />
+                <div id="searchResult" class="search-result hidden">
                   <div class="student-info">
                     <!-- Student info will be loaded here -->
                   </div>
                   <button
-                    class="btn btn-primary w-100 d-none"
+                    class="btn btn-primary full-width hidden"
                     id="viewIndexBtn"
                   >
-                    <i class="fas fa-eye me-2"></i>View Student Index
+                    </span>View Student Index
                   </button>
                 </div>
               </div>
@@ -152,110 +105,90 @@
       </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="container-xl">
-        <p class="mb-0">&copy; 2025 Jinky Borja Suson. All rights reserved.</p>
-      </div>
-    </footer>
-
     <!-- Add Student Modal -->
-    <div class="modal fade" id="addStudentModal" tabindex="-1">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Add New Student</h5>
-            <button
-              type="button"
-              class="btn-close"
-              data-bs-dismiss="modal"
-            ></button>
-          </div>
-          <div class="modal-body">
-            <form id="addStudentForm">
-              <div class="mb-4">
-                <label class="form-label">Name</label>
+    <div class="modal" id="addStudentModal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5>Add New Student</h5>
+          <button type="button" class="close-btn" id="closeModalBtn"></button>
+        </div>
+        <div class="modal-body">
+          <form id="addStudentForm">
+            <div class="form-group">
+              <label>Name</label>
+              <input
+                type="text"
+                class="form-control"
+                name="name"
+                required
+                autocomplete="off"
+              />
+              <div class="error-message">Please enter a name</div>
+            </div>
+            <div class="form-group">
+              <label>RFID Tag</label>
+              <input
+                type="text"
+                class="form-control"
+                name="rfid_tag"
+                required
+                autocomplete="off"
+              />
+              <div class="error-message">Please enter an RFID tag</div>
+            </div>
+            <div class="form-group">
+              <label>Course</label>
+              <input
+                type="text"
+                class="form-control"
+                name="course"
+                required
+                autocomplete="off"
+              />
+              <div class="error-message">Please enter a course</div>
+            </div>
+            <div class="form-row">
+              <div class="form-group">
+                <label>Year</label>
                 <input
-                  type="text"
+                  type="number"
                   class="form-control"
-                  name="name"
+                  name="year"
+                  min="1"
+                  max="5"
                   required
                   autocomplete="off"
                 />
-                <div class="invalid-feedback">Please enter a name</div>
+                <div class="error-message">Please enter a valid year (1-5)</div>
               </div>
-              <div class="mb-4">
-                <label class="form-label">RFID Tag</label>
+              <div class="form-group">
+                <label>Section</label>
                 <input
                   type="text"
                   class="form-control"
-                  name="rfid_tag"
+                  name="section"
                   required
                   autocomplete="off"
                 />
-                <div class="invalid-feedback">Please enter an RFID tag</div>
+                <div class="error-message">Please enter a section</div>
               </div>
-              <div class="mb-4">
-                <label class="form-label">Course</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="course"
-                  required
-                  autocomplete="off"
-                />
-                <div class="invalid-feedback">Please enter a course</div>
-              </div>
-              <div class="row mb-4">
-                <div class="col">
-                  <label class="form-label">Year</label>
-                  <input
-                    type="number"
-                    class="form-control"
-                    name="year"
-                    min="1"
-                    max="5"
-                    required
-                    autocomplete="off"
-                  />
-                  <div class="invalid-feedback">
-                    Please enter a valid year (1-5)
-                  </div>
-                </div>
-                <div class="col">
-                  <label class="form-label">Section</label>
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="section"
-                    required
-                    autocomplete="off"
-                  />
-                  <div class="invalid-feedback">Please enter a section</div>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-light" data-bs-dismiss="modal">
-              Cancel
-            </button>
-            <button type="button" class="btn btn-primary" id="saveStudentBtn">
-              Save Student
-            </button>
-          </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-light" id="cancelBtn">
+            Cancel
+          </button>
+          <button type="button" class="btn btn-primary" id="saveStudentBtn">
+            Save Student
+          </button>
         </div>
       </div>
     </div>
 
     <!-- Toast Container -->
-    <div
-      id="toastContainer"
-      class="toast-container position-fixed bottom-0 end-0 p-3"
-    ></div>
+    <div id="toastContainer" class="toast-container"></div>
 
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
     <script type="module" src="assets/js/main.js"></script>
   </body>
